--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "engines": {
     "vscode": "^0.10.x"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NathanH2111/Mt.-Doom-Theme"
+  },
   "type": "dark",
   "semanticHighlighting": true,
   "semanticTokenColors": {
