--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "contributes": {
         "themes": [
             {
+				"label": "Mt. Doom",
+				"uiTheme": "vs-dark",
                 "path": "./themes/theme.json"
             }
         ]
