Chagned gutter background color and messed with snytax color

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
             {
 				"label": "Mt. Doom",
 				"uiTheme": "vs-dark",
-                "path": "./themes/theme.json"
+                "path": "./themes/Mt-Doom.json"
             }
         ]
     }
