--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "greyandorange",
-    "version": "2.1.6",
+    "version": "2.1.7",
     "publisher": "nathanhedemark",
     "displayName": "Mt. Doom",
     "description": "A simple orange and grey based color theme.",
@@ -9,7 +9,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/NathanH2111/Mt.-Doom-Theme"
+        "url": "https://github.com/NathanH2111/mt-doom-theme"
     },
     "categories": [
         "Themes"
